# transformer-sentiment-analysis

./: .gitignore  ProjetTransformer.ipynb  README.md  analyse_sentiment.ipynb  pyproject.toml  transformer_modules.py
notebooks/: analyse_sentiment.ipynb
src/: __init__.py
src/modeles/: __init__.py  cnn_classifier.py  rnn_classifier.py  transformer_classifier.py
src/transformer_modules/: Embedding.py  Encoder.py  LayerNorm.py  MultiHeadedAttention.py  PositionalEncoding.py  PositionwiseFeedForward.py  SubLayerConnection.py  TransformerEncoderBlock.py  TransformerEncoderModel.py  __init__.py  transformer_modules.py
src/utils/: __init__.py  data.py  train_and_evaluate.py
tests/: test_models.py
