[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projet-transformer"
version = "0.1.0"
description = "Projet de classification de texte avec Transformer, RNN/GRU/LSTM et CNN."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pytest>=8.4.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
